# polestar-rs

./: .gitignore  Cargo.toml  template.rs
examples/: emojispam.rs  holochain.rs
holochain-model/: Cargo.toml
holochain-model/src/: lib.rs  network_single_op.rs  op_family.rs  op_family_known_deps.rs  op_network.rs  op_single.rs  playback.rs  single_op.rs
holochain-polestar/: Cargo.toml  README.md
holochain-polestar/proptest-regressions/ops/: projection.txt
holochain-polestar/src/: actor.rs  fsm.rs  holochain.rs  lib.rs  main.rs  ops.rs
holochain-polestar/src/holochain/: app.rs  app_store.rs  cell.rs  cell_store.rs  conductor.rs
holochain-polestar/src/ops/: model.rs  projection.rs  system.rs  system_old.rs
holochain-toy/: Cargo.toml
holochain-toy/src/holochain/: app.rs
holochain-toy/src/ops/: projection.rs
kitsune-model/: Cargo.toml
kitsune-model/src/: arq.rs  gossip.rs  lib.rs  shard.rs
kitsune-model/src/gossip/: _gossip_node_timed.rs  gossip_network.rs  gossip_node.rs  scheduler.rs  scheduler_ordered.rs
kitsune-polestar/: Cargo.toml
kitsune-polestar/src/: gossip_model.rs  lib.rs  round_model.rs
kitsune-polestar/tests/: discovery.rs
model-crates/holochain-model/src/: playback.rs
model-crates/holochain-toy/proptest-regressions/ops/: projection.txt
model-crates/holochain-toy/src/: holochain.rs  ops.rs
model-crates/holochain-toy/src/ops/: system.rs
model-crates/kitsune-model/: Cargo.toml  README.md
model-crates/kitsune-model/src/: gossip.rs  shard.rs  sharding.rs
model-crates/kitsune-model/src/gossip/: scheduler_ordered.rs
polestar/: Cargo.toml
polestar-macros/: Cargo.toml
polestar-patterns/: Cargo.toml
polestar-patterns/src/: lib.rs  network.rs  prelude.rs
polestar-patterns/src/network/: adjacency.rs  topology.rs
polestar-propmap/: Cargo.toml
polestar/examples/: emojispam.rs  fetch_timed.rs  fetch_timeless.rs  fetch_with_time.rs  monotonic_time.rs
polestar/src/: actor.rs  diagram.rs  event_handler.rs  ext.rs  generate.rs  id.rs  lib.rs  logic.rs  ltl.rs  machine.rs  mapping.rs  model_checker.rs  prelude.rs  time.rs  traversal.rs
polestar/src/diagram/: exhaustive.rs
polestar/src/event_handler/: inline_model_checker.rs
polestar/src/example_models/: fetch_timed.rs  mod.rs
polestar/src/id/: bag.rs  upto.rs  upto_lazy.rs
polestar/src/logic/: ltl3ba_parser.rs  propositions.rs
polestar/src/machine/: store_path.rs  unit.rs
polestar/src/model_checker/: buchi.rs  check.rs  tests.rs
polestar/src/unused/: ltl.rs
polestar/src/util/: combinators.rs  delay.rs  mod.rs
polestar/tests/: dining_philosophers.rs  tickets.rs
proptest-regressions/: lib.txt
src/: actor.rs  dfa.rs  diagram.rs  event_handler.rs  ext.rs  fsm.rs  fsm_cell.rs  fsm_wrappers.rs  generate.rs  id.rs  lib.rs  logic.rs  machine.rs  mapping.rs  model_checker.rs  nfm.rs  nondeterministic_automaton.rs  projection.rs  traversal.rs  util.rs
src/dfa/: checked.rs  context.rs
src/diagram/: arbitrary.rs  exhaustive.rs  is_terminal.rs  montecarlo.rs
src/fsm/: btreemap.rs  checked.rs  context.rs  ext.rs  hashmap.rs  refcell.rs
src/id/: upto.rs  upto_lazy.rs
src/logic/: promela_parser.rs
src/machine/: checked.rs  mcltl_buchi.rs  model_checker.rs  promela.rs  refcell.rs  store_path.rs
src/machine/model_checker/: buchi.rs  check.rs  tests.rs
src/machine/promela/: parser.rs
src/model_checker/: buchi.rs  check.rs  tests.rs
src/projection/: projection_result.rs
tests/: dining_philosophers.rs  thermostat.proptest-regressions  thermostat.rs
