[package]
name = "polestar"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
derive_more = "0.99"
num-derive = "0.4"
num-traits = "0.2"
parking_lot = "*"
proptest = "1.2.0"
proptest-derive = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"

exhaustive = { git = "https://github.com/maackle/exhaustive.git", optional = true }
petgraph = { version = "*", optional = true }
prettydiff = { version = "*", optional = true }

[dev-dependencies]
polestar = { path = ".", features = ["testing"] }


[features]
default = ["diagrams", "testing"]

diagrams = ["exhaustive", "petgraph"]
testing = ["prettydiff"]

[workspace]
members = ["holochain-model", "holochain-polestar"]

[patch.crates-io]
# holo_hash = { path = "/home/michael/Holo/chain/crates/holo_hash" }
proptest-derive = { git = "https://github.com/maackle/proptest.git", branch = "allow-non-local-definitions" }
exhaustive_macros = { git = "https://github.com/maackle/exhaustive.git" }
