[package]
name = "polestar"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
bon = "*"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
derive_bounded = "*"
derive_more = { version = "1", features = ["full"] }
im = { version = "*", features = ["rayon"] }
itertools = "*"
nom = "*"
num-derive = "0.4"
num-traits = "0.2"
parking_lot = "*"
proptest = "1.2.0"
proptest-derive = "0.5"
rayon = "*"
regex = "*"
rustversion = "*"
tracing = "0.1"
tracing-subscriber = "0.3"

exhaustive = { version = "*", optional = true }
petgraph = { version = "*", optional = true }
prettydiff = { version = "*", optional = true }

[dev-dependencies]
# polestar = { path = ".", features = ["diagrams", "testing"] }

[build-dependencies]
rustversion = "*"

[features]
default = ["diagrams", "testing"]

nightly = []
diagrams = ["exhaustive", "petgraph"]
testing = ["prettydiff"]


[workspace]
members = ["holochain-model", "kitsune-model", "polestar-macros", "polestar-propmap"]

[patch.crates-io]
# holo_hash = { path = "/home/michael/Holo/chain/crates/holo_hash" }
proptest-derive = { git = "https://github.com/maackle/proptest.git", branch = "allow-non-local-definitions" }
# exhaustive_macros = { git = "https://github.com/maackle/exhaustive.git" }
