[package]
name = "holochain-model"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
derive_more = { version = "1", features = ["full"] }
exhaustive = "*"
itertools = "*"
polestar = { version = "*", path = "../polestar" }
proptest = "1"
proptest-derive = "0"
tracing = "*"
tracing-subscriber = "*"

serde = { version = "1", features = ["derive"] }
serde_json = "*"

[dev-dependencies]
pretty_assertions = "*"

[patch.crates-io]
# exhaustive_macros = { git = "https://github.com/maackle/exhaustive.git" }
