[package]
name = "kitsune-polestar"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
derive_more = "0.99"
polestar = { path = ".." }
proptest = "*"
proptest-derive = "*"
tokio = { version = "*", features = ["full"] }

# kitsune_p2p = "*"
kitsune_p2p = { path = "/home/michael/Holo/chain/crates/kitsune_p2p/kitsune_p2p", features = [
  "fuzzing",
] }

[dev-dependencies]
prettydiff = "*"

kitsune_p2p_bin_data = { path = "/home/michael/Holo/chain/crates/kitsune_p2p/bin_data" }
kitsune_p2p = { path = "/home/michael/Holo/chain/crates/kitsune_p2p/kitsune_p2p", features = [
  "fuzzing",
  "test_utils",
] }
