[package]
name = "polestar-patterns"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
derive_more = { version = "1", features = ["full"] }
exhaustive = "0.2"
itertools = "0.14.0"
petgraph = "0.8.3"
polestar = { path = "../polestar" }
rand = "0.9.2"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
