[package]
name = "polestar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
colored = "2.2"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
derive_bounded = "0.5"
derive_more = { version = "1", features = ["full"] }
human-repr = "1.1"
im = { version = "15.1", features = ["rayon"] }
itertools = "0.14"
once_cell = "1.21"
num-derive = "0.4"
num-traits = "0.2"
parking_lot = "0.12"
proptest = "1.2.0"
proptest-derive = "0.5"
rayon = "1.10"
regex = "1.11"
rustversion = "1.0"
tracing = "0.1"

exhaustive = { version = "0.2", optional = true }
nom = { version = "7.1", optional = true }
petgraph = { version = "0.8.3", optional = true }
prettydiff = { version = "0.9", optional = true }
pretty_assertions = { version = "*", optional = true }
rand = { version = "0.10", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1.44", features = ["full"], optional = true }
tracing-subscriber = { version = "0.3", optional = true }

[dev-dependencies]
polestar = { path = ".", features = ["diagrams", "testing", "example-models"] }

[build-dependencies]
rustversion = "1.0"

[features]
default = ["diagrams", "ltl3ba", "recording"]

diagrams = ["exhaustive", "petgraph"]
example-models = ["testing"]
recording = ["serde", "serde_json"]
testing = ["rand", "pretty_assertions", "tokio", "tracing-subscriber"]

# this feature must be enabled, but once native LTL-to-Buchi is implemented,
# this and all related codepaths can go away
ltl3ba = ["nom"]

# only applicable with the "projection" system
# invariant-testing = ["prettydiff"]


nightly = []

# stuff that is not currently prioritized for stability
nonessential = []
