[package]
name = "kitsune-model"
version = "0.1.0"
edition = "2021"

# [[bin]]
# name = "kitsune-model"

[dependencies]
anyhow = "*"
derive_more = { version = "1", features = ["full"] }
exhaustive = "*"
im = "*"
itertools = "*"
num-traits = "*"
polestar = { version = "*", path = "../polestar" }
proptest = "1"
proptest-derive = "0"
tracing = "*"
tracing-subscriber = "*"

serde = { version = "1", features = ["derive"] }
serde_json = "*"

[dev-dependencies]
pretty_assertions = "*"

[patch.crates-io]
# exhaustive_macros = { git = "https://github.com/maackle/exhaustive.git" }
